Bugfix/13989 countdown value is truncated (#26)
* Set countdown-container font size depending on the number of days remaining

* Remove no longer needed font-size from CSS to prevent confusion

* Shrink font-size also for exact value of 100

* Moved choice to include a fraction or not to the Result class and reused that to determine font size (100.0 edge case not working in former commit)

--- a/CountdownWidget/CountdownWidget/static/css/app.css
+++ b/CountdownWidget/CountdownWidget/static/css/app.css
@@ -26,7 +26,6 @@
 
 .countdown-number {
     margin: 10px 0 10px 0;
-    font-size: 72px;
     font-weight: 300;
     line-height: 72px;
 }
